--- a/form.html
+++ b/form.html
@@ -3,72 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <title>Create Work Order</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f6f8;
-      padding: 20px;
-    }
-    .card {
-      max-width: 500px;
-      margin: auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-    label {
-      display: block;
-      margin-top: 12px;
-      font-weight: bold;
-    }
-    input, select, textarea, button {
-      width: 100%;
-      padding: 8px;
-      margin-top: 6px;
-    }
-    button {
-      margin-top: 16px;
-      background: #1976d2;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #125aa0;
-    }
-  </style>
 </head>
 <body>
 
-<div class="card">
-  <h2>Create Work Order</h2>
+<h2>Create Work Order</h2>
 
-  <label>Asset ID</label>
-  <input id="asset_id" value="TEST-ASSET">
+<label>Asset ID</label><br>
+<input id="asset_id" value="TEST-ASSET"><br><br>
 
-  <label>Line</label>
-  <select id="line">
-    <option>Line 1</option>
-    <option>Line 2</option>
-  </select>
+<label>Line</label><br>
+<select id="line">
+  <option>Line 1</option>
+  <option>Line 2</option>
+</select><br><br>
 
-  <label>Problem</label>
-  <textarea id="problem">Test problem</textarea>
+<label>Problem</label><br>
+<textarea id="problem">Test problem</textarea><br><br>
 
-  <label>Priority</label>
-  <select id="priority">
-    <option>Low</option>
-    <option>Medium</option>
-    <option selected>Critical</option>
-  </select>
+<label>Priority</label><br>
+<select id="priority">
+  <option>Low</option>
+  <option>Medium</option>
+  <option selected>Critical</option>
+</select><br><br>
 
-  <label>Owner</label>
-  <input id="owner" value="Tester">
+<label>Owner</label><br>
+<input id="owner" value="Tester"><br><br>
 
-  <button onclick="submitWO()">Submit Work Order</button>
-</div>
+<button onclick="submitWO()">Submit Work Order</button>
 
 <script>
 async function submitWO() {
@@ -84,23 +46,17 @@ async function submitWO() {
   const API_URL =
     "https://script.google.com/macros/s/AKfycbyMM20DT2UI1MH2BE3dsim7t94Ce6PsVM4R3CwsGCsjwE2s7BrRAZjZUa-v14hl_N9BJw/exec";
 
-  try {
-    const res = await fetch(API_URL, {
-      method: "POST",
-      body: JSON.stringify(payload)
-    });
+  const res = await fetch(API_URL, {
+    method: "POST",
+    body: JSON.stringify(payload)
+  });
 
-    const result = await res.json();
+  const result = await res.json();
 
-    if (result.status === "success") {
-      alert("✅ Work Order Created : " + result.wo_id);
-    } else {
-      alert("❌ Error : " + result.message);
-    }
-
-  } catch (err) {
-    alert("❌ Network Error");
-    console.error(err);
+  if (result.status === "success") {
+    alert("✅ Work Order Created : " + result.wo_id);
+  } else {
+    alert("❌ Error : " + result.message);
   }
 }
 </script>
