--- a/index.html
+++ b/index.html
@@ -41,3 +41,16 @@
 
 </body>
 </html>
+
+<a href="https://airservicepcg-ux.github.io/CMMS/technician.html"
+   style="
+     display:inline-block;
+     padding:12px 20px;
+     background:#0d47a1;
+     color:#fff;
+     text-decoration:none;
+     border-radius:8px;
+     font-weight:bold;
+   ">
+  📋 JOB STATUS
+</a>
