--- a/index.html
+++ b/index.html
@@ -1,56 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>CMMS – Food Factory</title>
+  <title>CMMS - Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     body {
       font-family: Arial, sans-serif;
-      background:#f5f7fb;
-      margin:0;
-      padding:40px;
+      background: #f4f6f9;
+      margin: 0;
+      padding: 0;
     }
-    h1 {
-      margin-bottom:20px;
+
+    header {
+      background: #0d47a1;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+      font-size: 24px;
+      font-weight: bold;
     }
-    .btn {
-      padding:12px 20px;
-      background:#163a8f;
-      color:#fff;
-      border:none;
-      border-radius:6px;
-      cursor:pointer;
-      font-size:16px;
+
+    .container {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
     }
-    .btn:hover {
-      background:#0f2a66;
+
+    .menu {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+    }
+
+    .menu a {
+      display: block;
+      padding: 25px;
+      background: #ffffff;
+      border-radius: 12px;
+      text-align: center;
+      text-decoration: none;
+      color: #0d47a1;
+      font-size: 18px;
+      font-weight: bold;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: 0.2s;
+    }
+
+    .menu a:hover {
+      background: #0d47a1;
+      color: #fff;
+      transform: translateY(-3px);
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      color: #666;
+      font-size: 14px;
     }
   </style>
 </head>
+
 <body>
 
-  <h1>CMMS – Food Factory</h1>
+  <header>
+    🏭 CMMS – Maintenance System
+  </header>
 
-  <button class="btn" onclick="goWorkOrder()">Work Order</button>
+  <div class="container">
+    <div class="menu">
 
-  <script>
-    function goWorkOrder() {
-      window.location.href = "workorder.html";
-    }
-  </script>
+      <!-- แจ้งซ่อม -->
+      <a href="form.html">
+        🛠️<br>
+        Create Work Order
+      </a>
+
+      <!-- JOB STATUS (Technician) -->
+      <a href="https://airservicepcg-ux.github.io/CMMS/technician.html">
+        📋<br>
+        JOB STATUS
+      </a>
+
+      <!-- เตรียมต่อยอด -->
+      <a href="#" onclick="alert('Coming soon')">
+        📊<br>
+        Maintenance KPI
+      </a>
+
+      <a href="#" onclick="alert('Coming soon')">
+        ⚙️<br>
+        Asset Master
+      </a>
+
+    </div>
+  </div>
+
+  <footer>
+    CMMS | Powered by Google Sheets & Apps Script
+  </footer>
 
 </body>
 </html>
-
-<a href="https://airservicepcg-ux.github.io/CMMS/technician.html"
-   style="
-     display:inline-block;
-     padding:12px 20px;
-     background:#0d47a1;
-     color:#fff;
-     text-decoration:none;
-     border-radius:8px;
-     font-weight:bold;
-   ">
-  📋 JOB STATUS
-</a>
