--- a/technician.html
+++ b/technician.html
@@ -1,21 +1,109 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Technician - Work Order</title>
+  <title>Technician – Work Order</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
-    body { font-family: Arial; background:#f4f6f8 }
-    table { width:100%; border-collapse:collapse; background:#fff }
-    th, td { padding:10px; border:1px solid #ddd }
-    th { background:#163a8f; color:#fff }
-    select { padding:6px }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f7fa;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h1 {
+      margin-bottom: 12px;
+    }
+
+    /* ================= FILTER BAR ================= */
+    .filter-bar {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-bottom: 16px;
+      background: #fff;
+      padding: 12px;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+    }
+
+    .filter-bar input,
+    .filter-bar select {
+      padding: 8px;
+      font-size: 14px;
+    }
+
+    .status-buttons button {
+      padding: 8px 14px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      background: #e0e0e0;
+      font-weight: bold;
+    }
+
+    .status-buttons button.active {
+      background: #1e40af;
+      color: #fff;
+    }
+
+    /* ================= TABLE ================= */
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background: #fff;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+    }
+
+    thead {
+      background: #1e3a8a;
+      color: #fff;
+    }
+
+    th, td {
+      padding: 10px;
+      border: 1px solid #ddd;
+      text-align: left;
+    }
+
+    tbody tr:hover {
+      background: #f1f5ff;
+    }
   </style>
 </head>
+
 <body>
 
-<h2>🔧 Technician – Work Order</h2>
+<h1>🛠️ Technician – Work Order</h1>
 
-<table id="woTable">
+<!-- ================= FILTER BAR ================= -->
+<div class="filter-bar">
+
+  <input type="text" id="filterWo" placeholder="WO ID">
+  <input type="text" id="filterAsset" placeholder="Asset">
+  <input type="text" id="filterProblem" placeholder="Problem">
+
+  <select id="filterPriority">
+    <option value="">All Priority</option>
+    <option value="Critical">Critical</option>
+    <option value="High">High</option>
+    <option value="Medium">Medium</option>
+    <option value="Low">Low</option>
+  </select>
+
+  <div class="status-buttons">
+    <button onclick="setStatusFilter('')" class="active" id="btnAll">ALL JOBS</button>
+    <button onclick="setStatusFilter('OPEN')">OPEN</button>
+    <button onclick="setStatusFilter('IN PROGRESS')">IN PROGRESS</button>
+    <button onclick="setStatusFilter('DONE')">DONE</button>
+  </div>
+
+</div>
+
+<!-- ================= TABLE ================= -->
+<table>
   <thead>
     <tr>
       <th>WO ID</th>
@@ -25,28 +113,75 @@
       <th>Status</th>
     </tr>
   </thead>
-  <tbody></tbody>
+  <tbody id="jobTable"></tbody>
 </table>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbyMM20DT2UI1MH2BE3dsim7t94Ce6PsVM4R3CwsGCsjwE2s7BrRAZjZUa-v14hl_N9BJw/exec";
+  // ================= CONFIG =================
+  const API_URL = "https://script.google.com/macros/s/AKfycbyMM20DT2UI1MH2BE3dsim7t94Ce6PsVM4R3CwsGCsjwE2s7BrRAZjZUa-v14hl_N9BJw/exec";
 
-fetch(API_URL + "?mode=workorder")
-  .then(r => r.json())
-  .then(data => {
-    const tbody = document.querySelector("#woTable tbody");
-    data.forEach(w => {
+  let allJobs = [];
+  let statusFilter = "";
+
+  // ================= LOAD DATA =================
+  fetch(API_URL)
+    .then(res => res.json())
+    .then(data => {
+      allJobs = data;
+      renderTable();
+    });
+
+  // ================= RENDER TABLE =================
+  function renderTable() {
+    const tbody = document.getElementById("jobTable");
+    tbody.innerHTML = "";
+
+    const fWo = document.getElementById("filterWo").value.toLowerCase();
+    const fAsset = document.getElementById("filterAsset").value.toLowerCase();
+    const fProblem = document.getElementById("filterProblem").value.toLowerCase();
+    const fPriority = document.getElementById("filterPriority").value;
+
+    const filtered = allJobs.filter(j =>
+      (!fWo || j.wo_id.toLowerCase().includes(fWo)) &&
+      (!fAsset || j.asset_id.toLowerCase().includes(fAsset)) &&
+      (!fProblem || j.problem.toLowerCase().includes(fProblem)) &&
+      (!fPriority || j.priority === fPriority) &&
+      (!statusFilter || j.status === statusFilter)
+    );
+
+    filtered.forEach(j => {
       const tr = document.createElement("tr");
       tr.innerHTML = `
-        <td>${w.wo_id}</td>
-        <td>${w.asset_id}</td>
-        <td>${w.problem}</td>
-        <td>${w.priority}</td>
-        <td>${w.status}</td>
+        <td>${j.wo_id}</td>
+        <td>${j.asset_id}</td>
+        <td>${j.problem}</td>
+        <td>${j.priority}</td>
+        <td>${j.status}</td>
       `;
       tbody.appendChild(tr);
     });
-  });
+  }
+
+  // ================= STATUS BUTTON =================
+  function setStatusFilter(status) {
+    statusFilter = status;
+
+    document.querySelectorAll(".status-buttons button")
+      .forEach(b => b.classList.remove("active"));
+
+    if (status === "") {
+      document.getElementById("btnAll").classList.add("active");
+    } else {
+      event.target.classList.add("active");
+    }
+
+    renderTable();
+  }
+
+  // ================= LIVE FILTER =================
+  document.querySelectorAll(
+    "#filterWo, #filterAsset, #filterProblem, #filterPriority"
+  ).forEach(el => el.addEventListener("input", renderTable));
 </script>
 
 </body>
