--- a/technician.html
+++ b/technician.html
@@ -1,108 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Technician – Work Order</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8" />
+<title>Technician - Work Order</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f7fa;
-      margin: 0;
-      padding: 20px;
-    }
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background: #f5f7fb;
+    margin: 0;
+    padding: 20px;
+  }
+  h1 {
+    margin-bottom: 16px;
+  }
 
-    h1 {
-      margin-bottom: 12px;
-    }
+  .filter-box {
+    background: #fff;
+    padding: 12px;
+    border-radius: 10px;
+    display: flex;
+    gap: 8px;
+    flex-wrap: wrap;
+    margin-bottom: 16px;
+  }
 
-    /* ================= FILTER BAR ================= */
-    .filter-bar {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-bottom: 16px;
-      background: #fff;
-      padding: 12px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
-    }
+  .filter-box input,
+  .filter-box select {
+    padding: 8px;
+    font-size: 14px;
+    min-width: 140px;
+  }
 
-    .filter-bar input,
-    .filter-bar select {
-      padding: 8px;
-      font-size: 14px;
-    }
+  .btn {
+    padding: 8px 14px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: bold;
+  }
 
-    .status-buttons button {
-      padding: 8px 14px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      background: #e0e0e0;
-      font-weight: bold;
-    }
+  .btn.active {
+    background: #1f3c88;
+    color: #fff;
+  }
 
-    .status-buttons button.active {
-      background: #1e40af;
-      color: #fff;
-    }
+  .btn.gray {
+    background: #e0e0e0;
+  }
 
-    /* ================= TABLE ================= */
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background: #fff;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
-    }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    background: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+  }
 
-    thead {
-      background: #1e3a8a;
-      color: #fff;
-    }
+  th {
+    background: #1f3c88;
+    color: #fff;
+    padding: 10px;
+    text-align: left;
+  }
 
-    th, td {
-      padding: 10px;
-      border: 1px solid #ddd;
-      text-align: left;
-    }
-
-    tbody tr:hover {
-      background: #f1f5ff;
-    }
-  </style>
+  td {
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+  }
+</style>
 </head>
 
 <body>
 
-<h1>🛠️ Technician – Work Order</h1>
+<h1>🛠 Technician – Work Order</h1>
 
-<!-- ================= FILTER BAR ================= -->
-<div class="filter-bar">
+<!-- FILTER -->
+<div class="filter-box">
+  <input id="fWo" placeholder="WO ID" oninput="applyFilter()" />
+  <input id="fAsset" placeholder="Asset" oninput="applyFilter()" />
+  <input id="fProblem" placeholder="Problem" oninput="applyFilter()" />
 
-  <input type="text" id="filterWo" placeholder="WO ID">
-  <input type="text" id="filterAsset" placeholder="Asset">
-  <input type="text" id="filterProblem" placeholder="Problem">
-
-  <select id="filterPriority">
+  <select id="fPriority" onchange="applyFilter()">
     <option value="">All Priority</option>
-    <option value="Critical">Critical</option>
-    <option value="High">High</option>
-    <option value="Medium">Medium</option>
-    <option value="Low">Low</option>
+    <option>Critical</option>
+    <option>High</option>
+    <option>Medium</option>
+    <option>Low</option>
   </select>
 
-  <div class="status-buttons">
-    <button onclick="setStatusFilter('')" class="active" id="btnAll">ALL JOBS</button>
-    <button onclick="setStatusFilter('OPEN')">OPEN</button>
-    <button onclick="setStatusFilter('IN PROGRESS')">IN PROGRESS</button>
-    <button onclick="setStatusFilter('DONE')">DONE</button>
-  </div>
-
+  <button class="btn active" onclick="setStatus('')">ALL JOBS</button>
+  <button class="btn gray" onclick="setStatus('OPEN')">OPEN</button>
+  <button class="btn gray" onclick="setStatus('IN PROGRESS')">IN PROGRESS</button>
+  <button class="btn gray" onclick="setStatus('DONE')">DONE</button>
 </div>
 
-<!-- ================= TABLE ================= -->
+<!-- TABLE -->
 <table>
   <thead>
     <tr>
@@ -117,71 +111,70 @@
 </table>
 
 <script>
-  // ================= CONFIG =================
-  const API_URL = "https://script.google.com/macros/s/AKfycbyMM20DT2UI1MH2BE3dsim7t94Ce6PsVM4R3CwsGCsjwE2s7BrRAZjZUa-v14hl_N9BJw/exec";
+const GAS_URL = "PUT_YOUR_WEBAPP_URL_HERE"; 
+// ⬆️ ใช้ URL เดียวกับที่คุณใช้โหลด technician ก่อนหน้า
 
-  let allJobs = [];
-  let statusFilter = "";
+let allJobs = [];
+let currentStatus = "";
 
-  // ================= LOAD DATA =================
-  fetch(API_URL)
-    .then(res => res.json())
-    .then(data => {
-      allJobs = data;
-      renderTable();
-    });
+// ================================
+// LOAD ALL JOBS
+// ================================
+fetch(GAS_URL + "?mode=alljobs")
+  .then(res => res.json())
+  .then(data => {
+    allJobs = data;
+    applyFilter();
+  });
 
-  // ================= RENDER TABLE =================
-  function renderTable() {
-    const tbody = document.getElementById("jobTable");
-    tbody.innerHTML = "";
+// ================================
+// FILTER LOGIC
+// ================================
+function setStatus(status) {
+  currentStatus = status;
 
-    const fWo = document.getElementById("filterWo").value.toLowerCase();
-    const fAsset = document.getElementById("filterAsset").value.toLowerCase();
-    const fProblem = document.getElementById("filterProblem").value.toLowerCase();
-    const fPriority = document.getElementById("filterPriority").value;
+  document.querySelectorAll(".btn").forEach(b => b.classList.remove("active"));
+  event.target.classList.add("active");
 
-    const filtered = allJobs.filter(j =>
-      (!fWo || j.wo_id.toLowerCase().includes(fWo)) &&
-      (!fAsset || j.asset_id.toLowerCase().includes(fAsset)) &&
-      (!fProblem || j.problem.toLowerCase().includes(fProblem)) &&
-      (!fPriority || j.priority === fPriority) &&
-      (!statusFilter || j.status === statusFilter)
-    );
+  applyFilter();
+}
 
-    filtered.forEach(j => {
-      const tr = document.createElement("tr");
-      tr.innerHTML = `
-        <td>${j.wo_id}</td>
-        <td>${j.asset_id}</td>
-        <td>${j.problem}</td>
-        <td>${j.priority}</td>
-        <td>${j.status}</td>
-      `;
-      tbody.appendChild(tr);
-    });
-  }
+function applyFilter() {
+  const wo = document.getElementById("fWo").value.toLowerCase();
+  const asset = document.getElementById("fAsset").value.toLowerCase();
+  const problem = document.getElementById("fProblem").value.toLowerCase();
+  const priority = document.getElementById("fPriority").value;
 
-  // ================= STATUS BUTTON =================
-  function setStatusFilter(status) {
-    statusFilter = status;
+  const filtered = allJobs.filter(j =>
+    (!wo || j.wo_id.toLowerCase().includes(wo)) &&
+    (!asset || j.asset.toLowerCase().includes(asset)) &&
+    (!problem || j.problem.toLowerCase().includes(problem)) &&
+    (!priority || j.priority === priority) &&
+    (!currentStatus || j.status === currentStatus)
+  );
 
-    document.querySelectorAll(".status-buttons button")
-      .forEach(b => b.classList.remove("active"));
+  renderTable(filtered);
+}
 
-    if (status === "") {
-      document.getElementById("btnAll").classList.add("active");
-    } else {
-      event.target.classList.add("active");
-    }
+// ================================
+// RENDER TABLE
+// ================================
+function renderTable(rows) {
+  const tbody = document.getElementById("jobTable");
+  tbody.innerHTML = "";
 
-    renderTable();
-  }
-
-  // ================= LIVE FILTER =================
-  document.querySelectorAll(
-    "#filterWo, #filterAsset, #filterProblem, #filterPriority"
-  ).forEach(el => el.addEventListener("input", renderTable));
+  rows.forEach(r => {
+    const tr = document.createElement("tr");
+    tr.innerHTML = `
+      <td>${r.wo_id}</td>
+      <td>${r.asset}</td>
+      <td>${r.problem}</td>
+      <td>${r.priority}</td>
+      <td>${r.status}</td>
+    `;
+    tbody.appendChild(tr);
+  });
+}
 </script>
 
 </body>
