--- a/technician.html
+++ b/technician.html
@@ -2,179 +2,168 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Technician - Work Order</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    background: #f5f7fb;
-    margin: 0;
-    padding: 20px;
-  }
-  h1 {
-    margin-bottom: 16px;
-  }
+body {
+  font-family: Arial, sans-serif;
+  background: #f4f6f8;
+  margin: 0;
+  padding: 20px;
+}
 
-  .filter-box {
-    background: #fff;
-    padding: 12px;
-    border-radius: 10px;
-    display: flex;
-    gap: 8px;
-    flex-wrap: wrap;
-    margin-bottom: 16px;
-  }
+/* ===== TOP BAR ===== */
+.top-bar {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  background: #1f3c88;
+  color: #fff;
+  padding: 14px 20px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
 
-  .filter-box input,
-  .filter-box select {
-    padding: 8px;
-    font-size: 14px;
-    min-width: 140px;
-  }
+.top-bar button {
+  background: #ffffff;
+  color: #1f3c88;
+  border: none;
+  padding: 8px 14px;
+  border-radius: 6px;
+  font-weight: bold;
+  cursor: pointer;
+}
 
-  .btn {
-    padding: 8px 14px;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-weight: bold;
-  }
+.top-bar button:hover {
+  background: #e6e6e6;
+}
 
-  .btn.active {
-    background: #1f3c88;
-    color: #fff;
-  }
+.top-title {
+  font-size: 20px;
+  font-weight: bold;
+}
 
-  .btn.gray {
-    background: #e0e0e0;
-  }
+/* ===== TABLE ===== */
+.table-wrap {
+  background: white;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+  overflow-x: auto;
+}
 
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    background: #fff;
-    border-radius: 10px;
-    overflow: hidden;
-  }
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
 
-  th {
-    background: #1f3c88;
-    color: #fff;
-    padding: 10px;
-    text-align: left;
-  }
+thead {
+  background: #1f3c88;
+  color: white;
+}
 
-  td {
-    padding: 10px;
-    border-bottom: 1px solid #eee;
-  }
+th, td {
+  padding: 12px;
+  border-bottom: 1px solid #ddd;
+  text-align: left;
+}
+
+th {
+  font-size: 14px;
+}
+
+tbody tr:hover {
+  background: #f1f5ff;
+}
+
+.status-open {
+  color: #d97706;
+  font-weight: bold;
+}
+
+.status-done {
+  color: #16a34a;
+  font-weight: bold;
+}
+
+.status-progress {
+  color: #2563eb;
+  font-weight: bold;
+}
 </style>
 </head>
 
 <body>
 
-<h1>🛠 Technician – Work Order</h1>
-
-<!-- FILTER -->
-<div class="filter-box">
-  <input id="fWo" placeholder="WO ID" oninput="applyFilter()" />
-  <input id="fAsset" placeholder="Asset" oninput="applyFilter()" />
-  <input id="fProblem" placeholder="Problem" oninput="applyFilter()" />
-
-  <select id="fPriority" onchange="applyFilter()">
-    <option value="">All Priority</option>
-    <option>Critical</option>
-    <option>High</option>
-    <option>Medium</option>
-    <option>Low</option>
-  </select>
-
-  <button class="btn active" onclick="setStatus('')">ALL JOBS</button>
-  <button class="btn gray" onclick="setStatus('OPEN')">OPEN</button>
-  <button class="btn gray" onclick="setStatus('IN PROGRESS')">IN PROGRESS</button>
-  <button class="btn gray" onclick="setStatus('DONE')">DONE</button>
+<!-- ===== TOP BAR ===== -->
+<div class="top-bar">
+  <button onclick="goHome()">⬅ Home</button>
+  <div class="top-title">🛠 Technician – Work Order</div>
 </div>
 
-<!-- TABLE -->
-<table>
-  <thead>
-    <tr>
-      <th>WO ID</th>
-      <th>Asset</th>
-      <th>Problem</th>
-      <th>Priority</th>
-      <th>Status</th>
-    </tr>
-  </thead>
-  <tbody id="jobTable"></tbody>
-</table>
+<!-- ===== TABLE ===== -->
+<div class="table-wrap">
+  <table>
+    <thead>
+      <tr>
+        <th>WO ID</th>
+        <th>Asset</th>
+        <th>Problem</th>
+        <th>Priority</th>
+        <th>Status</th>
+      </tr>
+    </thead>
+    <tbody id="woTable">
+      <tr>
+        <td colspan="5">Loading...</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
 <script>
-const GAS_URL = "PUT_YOUR_WEBAPP_URL_HERE"; 
-// ⬆️ ใช้ URL เดียวกับที่คุณใช้โหลด technician ก่อนหน้า
+/* ===== CONFIG ===== */
+const API_URL = "https://script.google.com/macros/s/AKfycbyMM20DT2UI1MH2BE3dsim7t94Ce6PsVM4R3CwsGCsjwE2s7BrRAZjZUa-v14hl_N9BJw/exec";
 
-let allJobs = [];
-let currentStatus = "";
+/* ===== NAV ===== */
+function goHome() {
+  window.location.href = "https://airservicepcg-ux.github.io/CMMS/";
+}
 
-// ================================
-// LOAD ALL JOBS
-// ================================
-fetch(GAS_URL + "?mode=alljobs")
+/* ===== LOAD WORK ORDER ===== */
+fetch(API_URL)
   .then(res => res.json())
   .then(data => {
-    allJobs = data;
-    applyFilter();
+    const tbody = document.getElementById("woTable");
+    tbody.innerHTML = "";
+
+    if (!data || data.length === 0) {
+      tbody.innerHTML = "<tr><td colspan='5'>No Work Order</td></tr>";
+      return;
+    }
+
+    data.forEach(r => {
+      const tr = document.createElement("tr");
+
+      const statusClass =
+        r.status === "OPEN" ? "status-open" :
+        r.status === "DONE" ? "status-done" :
+        "status-progress";
+
+      tr.innerHTML = `
+        <td>${r.wo_id}</td>
+        <td>${r.asset}</td>
+        <td>${r.problem}</td>
+        <td>${r.priority}</td>
+        <td class="${statusClass}">${r.status}</td>
+      `;
+      tbody.appendChild(tr);
+    });
+  })
+  .catch(err => {
+    document.getElementById("woTable").innerHTML =
+      "<tr><td colspan='5'>Load failed</td></tr>";
   });
-
-// ================================
-// FILTER LOGIC
-// ================================
-function setStatus(status) {
-  currentStatus = status;
-
-  document.querySelectorAll(".btn").forEach(b => b.classList.remove("active"));
-  event.target.classList.add("active");
-
-  applyFilter();
-}
-
-function applyFilter() {
-  const wo = document.getElementById("fWo").value.toLowerCase();
-  const asset = document.getElementById("fAsset").value.toLowerCase();
-  const problem = document.getElementById("fProblem").value.toLowerCase();
-  const priority = document.getElementById("fPriority").value;
-
-  const filtered = allJobs.filter(j =>
-    (!wo || j.wo_id.toLowerCase().includes(wo)) &&
-    (!asset || j.asset.toLowerCase().includes(asset)) &&
-    (!problem || j.problem.toLowerCase().includes(problem)) &&
-    (!priority || j.priority === priority) &&
-    (!currentStatus || j.status === currentStatus)
-  );
-
-  renderTable(filtered);
-}
-
-// ================================
-// RENDER TABLE
-// ================================
-function renderTable(rows) {
-  const tbody = document.getElementById("jobTable");
-  tbody.innerHTML = "";
-
-  rows.forEach(r => {
-    const tr = document.createElement("tr");
-    tr.innerHTML = `
-      <td>${r.wo_id}</td>
-      <td>${r.asset}</td>
-      <td>${r.problem}</td>
-      <td>${r.priority}</td>
-      <td>${r.status}</td>
-    `;
-    tbody.appendChild(tr);
-  });
-}
 </script>
 
 </body>
