--- a/form.html
+++ b/form.html
@@ -56,16 +56,36 @@ input, textarea, select {
   border: 1px solid #ccc;
 }
 
+/* ===== Submit Button UX ===== */
 .submit-btn {
   margin-top: 20px;
   width: 100%;
   padding: 12px;
-  background: #1f3c88;
+  background: linear-gradient(135deg, #1f3c88, #274bb5);
   color: white;
   border: none;
   border-radius: 8px;
   font-size: 16px;
   font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 6px 0 #152a63;
+  transition: all 0.15s ease;
+}
+
+.submit-btn:active {
+  transform: translateY(4px);
+  box-shadow: 0 2px 0 #152a63;
+}
+
+.submit-btn.loading {
+  background: #999;
+  box-shadow: none;
+  cursor: not-allowed;
+}
+
+.submit-btn.success {
+  background: #2e7d32;
+  box-shadow: 0 6px 0 #1b5e20;
 }
 
 #qr-reader { display:none; margin-top:10px; }
@@ -142,7 +162,9 @@ input, textarea, select {
 <input type="file" id="cameraInput" accept="image/*" capture="environment" style="display:none"/>
 <div id="preview"></div>
 
-<button class="submit-btn" onclick="submitWO()">Submit Work Order</button>
+<button id="submitBtn" class="submit-btn" onclick="submitWO()">
+  Submit Work Order
+</button>
 
 </div>
 
@@ -196,43 +218,73 @@ function takePhoto(){
 }
 
 document.getElementById("cameraInput").addEventListener("change",()=>{
-  const file=document.getElementById("cameraInput").files[0];
+  const file=cameraInput.files[0];
   if(!file) return;
   const r=new FileReader();
   r.onload=()=>{
     images.push(r.result);
     const img=document.createElement("img");
     img.src=r.result;
-    document.getElementById("preview").appendChild(img);
+    preview.appendChild(img);
     document.getElementById("photo-count").textContent=images.length+" / "+maxPhotos;
   };
   r.readAsDataURL(file);
 });
 
-/* SUBMIT */
-function submitWO(){
-  const payload={
-    asset_id:asset_id.value,
-    line:line.value,
-    problem:problem.value,
-    priority:priority.value,
-    owner:owner.value,
-    email:email.value,
-    phone:phone.value,
-    images:images
-  };
+/* SUBMIT WITH UX */
+async function submitWO(){
+  const btn=document.getElementById("submitBtn");
+  if(btn.classList.contains("loading")) return;
 
-  fetch(API_URL,{
-    method:"POST",
-    body:JSON.stringify(payload)
-  })
-  .then(r=>r.json())
-  .then(d=>{
-    alert("Created "+d.wo_id);
-    location.reload();
-  });
+  btn.classList.add("loading");
+  btn.disabled=true;
+  btn.innerText="⏳ Sending...";
+
+  try{
+    const payload={
+      asset_id:asset_id.value,
+      line:line.value,
+      problem:problem.value,
+      priority:priority.value,
+      owner:owner.value,
+      email:email.value,
+      phone:phone.value,
+      images:images
+    };
+
+    const res=await fetch(API_URL,{
+      method:"POST",
+      body:JSON.stringify(payload)
+    });
+
+    const d=await res.json();
+
+    if(d.status==="success"){
+      btn.classList.remove("loading");
+      btn.classList.add("success");
+      btn.innerText="✅ Created";
+
+      alert("Created "+d.wo_id);
+
+      setTimeout(()=>{
+        btn.classList.remove("success");
+        btn.innerText="Submit Work Order";
+        btn.disabled=false;
+        location.reload();
+      },1200);
+    }else{
+      throw new Error(d.message||"Submit failed");
+    }
+  }catch(err){
+    alert("❌ Error sending data");
+    console.error(err);
+    btn.classList.remove("loading");
+    btn.innerText="Submit Work Order";
+    btn.disabled=false;
+  }
 }
 </script>
 
 </body>
 </html>
+
